[package]
name = "image-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "image-proxy-server"
path = "src/native.rs"
required-features = ["native"]

[features]
default = ["cloudflare"]
cloudflare = ["dep:worker"]
native = ["dep:axum", "dep:tokio", "dep:reqwest", "dep:tower-http"]

[dependencies]
image      = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
thiserror  = "2"
url        = "2"

# Cloudflare Worker
worker = { version = "0.7", optional = true }

# Native server (tokio + axum)
axum       = { version = "0.8", default-features = false, features = ["http1", "tokio"], optional = true }
tokio      = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"], optional = true }
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[profile.release]
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

# WASM: override to "z" for size via --config profile.release.opt-level=\"z\"
# Native: "s" balances speed and size (vs "3" for max speed, "z" for min size)
opt-level = "s"
